Describe your update here

--- a/Learning-Management-System-main/render.yaml
+++ b/Learning-Management-System-main/render.yaml
@@ -1,20 +1,12 @@
 services:
   - type: web
     name: lms-backend
-    env: java
-    rootDir: backend
-    buildCommand: ./mvnw -DskipTests package
-    startCommand: java -jar target/Learning-Management-System-0.0.1-SNAPSHOT.jar
+    runtime: docker
+    rootDir: Learning-Management-System-main/backend
     plan: free
     autoDeploy: true
+    healthCheckPath: /actuator/health
     envVars:
-      - key: JAVA_VERSION
-        value: 21
       - key: SPRING_PROFILES_ACTIVE
         value: default
-    healthCheckPath: /actuator/health
-    headers:
-      - path: /*
-        name: Access-Control-Allow-Origin
-        value: "*"
 
