--- a/Learning-Management-System-main/netlify.toml
+++ b/Learning-Management-System-main/netlify.toml
@@ -1,6 +1,6 @@
 # Netlify config (root) — build from frontend directory
 [build]
-  command = "npm --prefix Learning-Management-System-main/frontend install && npm --prefix Learning-Management-System-main/frontend run build"
+  command = "npm --prefix Learning-Management-System-main/frontend install && CI=false npm --prefix Learning-Management-System-main/frontend run build"
   publish = "Learning-Management-System-main/frontend/build"
 
 [[redirects]]
