Fix Render deployment: Add database configuration guide and update render.yaml

--- a/Learning-Management-System-main/backend/src/main/resources/application.yml
+++ b/Learning-Management-System-main/backend/src/main/resources/application.yml
@@ -1,7 +1,10 @@
+server:
+  port: ${PORT:8080}
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/learning_management?createDatabaseIfNotExist=true}
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/learning_management?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
     username: ${SPRING_DATASOURCE_USERNAME:root}
     password: ${SPRING_DATASOURCE_PASSWORD:123456789}
 
